# hypothetical-engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  README.md  bridge.pyx  build.py  guide.md  main.cpp
cy_stuff/: cool_maths.pyx  heck.c  very_cool_maths.pxd  very_cool_maths.pyx
engine/: engine.cpp  engine.h
ext/include/nanogui/: nanogui.h  screen.h
ext/lib/: nanogui.lib
python_bit/: build_engine_linux.py  build_engine_win.py
python_bit/engine/: __init__.py  assimp.pxd  cengine.pxd  cengine.pyx  crash_handler.pxi  engine.pyx  gl_declarations.pxi  glfw_declarations.pxd  model.pxd  model.pxi  model.pyx  nanogui.pxd  nanogui.pxi  physics.pxi  shader.pxd  shader.pxi  shader.pyx  texture.pxi  util.pxi  window.pxi
python_bit/safety_folder/: camera.py  cube.py  editor.py  game.py  just_run_demo.py  main.py  main2.py  physics.py  save.json  script.py  util.py
python_bit/safety_folder/classes/: axis.py
python_bit/safety_folder/enginelib/: camera.py  cube.py  editor.py  game.py  physics.py  script.py  util.py
python_bit/safety_folder/scripts/: editor_scripts.py  keys.py  physics.py  spin.py
src/: README  README.md
src/enginecore/c/: crash.c  engine.cpp  engine.h
src/enginecore/cython_code/: README  build.py  cengine.pxd  crash_handler.pxi  engine.pyx  glfw_declarations.pxd  model.pxi  nanogui.pxd  nanogui.pxi  physics.pxi  shader.pxi  texture.pxi  util.pxi  window.pxi
src/enginecore/tests/: README.txt  (+1 more)
src/enginelib/: camera.py  editor.py  editor_scripts.py  entity.py  game.py  physics.py  script.py  util.py
src/example/: main.py  save.json
(+40 files in other folders)
